update vendor file tracking.